	now the letter "é".
	- Reactivated the spin button to select the basic lesson on progress
	charts.
	- Return of value -1 for pointer in gtk_databox_get_graphs(), now
	returning NULL.
	* Changed:
	- Reset button put a bit aside from the Close button, in the progress
	charts.
	- New phrases for C.paragraphs (default English), avoiding political
	subjects.
	- Some new phrases for pt_br.paragraphs.
	* Fixed messages:
	- Typo: Kunf-fu mastering --> Kung-fu mastery
	- Idiom: make better --> do better
	* Added translations:
	- Slovenian.
	* Updated translations:
	- Czech.
	- Galician.
	- German.
	- Swedish (also sv.paragraphs and sv.words).


2014-01-21  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.00
	* Fixed:
	- Typo: prefered --> preferred
	- Manpage: minus as hyphen corrected with escapes (\-)
	* Changed:
	- Migrated from GTK2 to GTK3.
	- GtkDatabox is incorporated statically, because its last release does
	  not support GTK3 yet.
	- FontSelectionDialog is deprecated, so using now a FontButton.
	- Some translatable messages were reviewed.
	- Default background color for the tutor practice text came back to
	  ice-white: colors are easier customizable in the preferences.ini file.
	* Added:
	- Keywords in the klavaro.desktop file.
	- Goals for touch typing skill are now configurable through the
	  prefences.ini file.
	- Programmer Dvorak keyboard layout added (dvorak_us_prog.kbd).
	* Updated translations:
	- Basque.
	- Danish.
	- Dutch.
	- Esperanto.
	- Greek.
	- Hungarian.
	- Portuguese (Brazilian).
	- Ukrainian.
	- Vietnamese.
	* Added translations:
	- Finnish (partial).

2014-01-03  Felipe Castro (-) <fefcas@gmail.com>; gettextize (=)

	* Release 2.01
	* Fixed:
	- Icon indication in the .desktop file now gives only the relative
	  name (klavaro), not the complete absolute path: more general.
	- Italian translation, _Next <==> _Previous (by hand, waiting update
	  from the Translation Project)